# rust-tinymd-compiler

./: Cargo.toml  test.html  test.md
src/: main.rs
