[package]
name = "tinymd"
version = "0.1.0"
authors = ["Sebastian Rodriguez Marin <rodriguez.marin.sebastian@gmail.com>"]
edition = "2018"
description = "A tiny markdown compiler based on Jesse's tutorial"
homepage = "http://seromarin.dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
